# HospitalManagement

./: AdminWindow.ui  CMakeLists.txt  DoctorWindow.ui  LoginWindow.ui  LoginWindow.ui.bak  ReceptionistWindow.ui  admin.cpp  admin.h  adminwindow.cpp  adminwindow.h  attendancelog.cpp  attendancelog.h  billableitem.cpp  billableitem.h  billingmanager.cpp  billingmanager.h  diagnosis.cpp  diagnosis.h  doctor.cpp  doctor.h  doctorwindow.cpp  doctorwindow.h  drug.cpp  drug.h  drugitem.h  invoice.cpp  invoice.h  labtest.h  loginwindow.cpp  loginwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  medicalrecord.cpp  medicalrecord.h  patient.h  permission.cpp  permission.h  prescription.cpp  (+10 more)
.github/workflows/: build.yml
